Mixed Playground/force-app/main/default/objects/Trade_History__c/Trade_History__c.object-meta.xml
<CustomObject>
    <label>Trade History</label>
    <nameField>
        <label>Trade History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trades History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>