Mixed Playground/force-app/main/default/objects/Trade_History__c/fields/Trade_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_Date__c</fullName>
    <label>Trade Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>