Mixed Playground/force-app/main/default/objects/Trade_History__c/validationRules/Insuficient_Resources.validationRule-meta.xml
<ValidationRule>
    <fullName>Insuficient_Resources</fullName>
    <active>true</active>
    <errorConditionFormula>User__r.Points__c &lt; Trade__r.Spend__c</errorConditionFormula>
    <errorMessage>Not enough points.</errorMessage>
</ValidationRule>